fix overflow

--- a/styles/place.css
+++ b/styles/place.css
@@ -17,7 +17,7 @@ header h1 {
 main {
     background: white;
     grid-template: auto 1fr auto / auto 1fr auto;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .hero {
